# intern-pipelining

./: .gitignore  CMakeLists.txt  Makefile  README.md  pipeline_stages.h  pipelining.prof
include/: blocking_queue.h  blocking_queue_decl.h  component.h  component_consume_only.h  component_consume_only_decl.h  component_decl.h  component_gen_only.h  component_gen_only_decl.h  pipeline_buffer.h  pipeline_buffer_decl.h  pipeline_orchestrator.h  pipeline_orchestrator_decl.h  test_component_gen.h  test_component_gen_decl.h  test_component_stdout.h  test_component_stdout_decl.h
src/: pipeline_stages.cpp  pipelining.cpp  test.cpp
